--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/apirest?useSSL=false&serverTimezone=UTC&useLegacyDateTimeCode=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password= 0000
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
